--- a/paginas/contactanos.html
+++ b/paginas/contactanos.html
@@ -3,28 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../css/styles.css">
     <title>Tinta Digital | Contáctanos</title>
 </head>
 <body>
-    <div>
         <header>
             <div>
                 <h1 id="titulo">TINTA DIGITAL</h1>
             </div>
+        </header>
             <nav>
                 <div>
-                    <a href="..\index.html">Inicio</a>
-                    <a href="paginas\nosotros.html">Nosotros</a>
-                    <a href="paginas\contactanos.html">Contacto</a>
-                    <a href="paginas\eventos.html">Eventos</a>
-                    <a href="paginas\login.html">Log In</a>
+                    <a href="../index.html">Inicio</a>
+                    <a href="nosotros.html">Nosotros</a>
+                    <a href="contactanos.html">Contacto</a>
+                    <a href="eventos.html">Eventos</a>
+                    <a href="login.html">Log In</a>
                 </div>
-            </nav>
-        </header>
-    </div>      
-
-
-    <!--Donde irá el contenido de cada página-->
+            </nav>   
 
 
     <div>
