--- a/paginas/eventos.html
+++ b/paginas/eventos.html
@@ -1,11 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="../css/styles.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Tinta Digital</title>
 </head>
 <body>
-    
+    <header>
+        <div>
+            <h1 id="titulo">TINTA DIGITAL</h1>
+        </div>
+    </header>
+        <nav>
+            <div>
+                <a href="../index.html">Inicio</a>
+                <a href="nosotros.html">Nosotros</a>
+                <a href="contactanos.html">Contacto</a>
+                <a href="eventos.html">Eventos</a>
+                <a href="login.html">Log In</a>
+            </div>
+        </nav>   
+
+
+
+
+
+<div>
+    <footer>
+        <div>
+            <a href="#titulo">Ir arriba</a><br>
+            <img src="image.png" width="50"/>
+            <img src="image1.png" width="50"/>
+            <img src="image2.png" width="50"/><br>
+            <a>TELÉFONO: XXX-XXX-XXX . MÓVIL XXX-XXX-XXXX.  EMAIL: </a>
+            <a href="mailto:SAMPLE@DOMINIO.COM">SAMPLE@DOMINIO.COM</a>
+        </div>
+    </footer>
+</div>
 </body>
 </html>
