--- a/paginas/nosotros.html
+++ b/paginas/nosotros.html
@@ -21,7 +21,7 @@
     </section>
     <section>
         <article >
-            <h2>Acerca de Tinta Digital</h2>
+            <h2>ACERCA DE Tinta Digital</h2>
             <p>Somos un refugio digital para los amantes de los libros y la literatura. En nuestro espacio, nos dedicamos a fomentar el amor por la lectura y ofrecer una experiencia enriquecedora y accesible para todos.
                 En nuestra plataforma, encontrarás una variedad de géneros que satisfarán todos los gustos. Ya sea que disfrutes de la ficción, la no ficción, la fantasía, el misterio o la ciencia ficción, tenemos algo para ti. 
             </p>
