--- a/paginas/nosotros.html
+++ b/paginas/nosotros.html
@@ -7,7 +7,7 @@
 <body>
     <header>
         <div>
-        <h1 id="titulo">TINTA DIGITAL</h1>
+        <h1><img src="../resources/logo.png" class="logo"></h1>
         </div>
     </header>
     <section>
@@ -40,7 +40,6 @@
         </article>
     </section>
     <footer>
-        <!-- href hacia arriba solo se puede usar con id, no con class -->
         <a href="#titulo">Ir arriba</a>
     </footer>
 </body>
