--- a/paginas/contactanos.html
+++ b/paginas/contactanos.html
@@ -3,33 +3,67 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/styles.css">
     <title>Tinta Digital | Contáctanos</title>
+    <link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
+    <div>
         <header>
             <div>
                 <h1 id="titulo">TINTA DIGITAL</h1>
             </div>
         </header>
-            <nav>
-                <div>
-                    <a href="../index.html">Inicio</a>
-                    <a href="nosotros.html">Nosotros</a>
-                    <a href="contactanos.html">Contacto</a>
-                    <a href="eventos.html">Eventos</a>
-                    <a href="login.html">Log In</a>
-                </div>
-            </nav>   
+    </div>      
+    <nav>
+        <div>
+            <a href="..\index.html">Inicio</a>
+            <a href="paginas\nosotros.html">Nosotros</a>
+            <a href="contactanos.html">Contacto</a>
+            <a href="paginas\eventos.html">Eventos</a>
+            <a href="paginas\login.html">Log In</a>
+        </div>
+    </nav>
+    <div><h1>Contáctanos</h1></div>
 
+    <div><p>Si deseas consultar mayor información sobre nuestrosservicios o tienes alguna duda al respecto, no dudes en solicitar un consultoría gratuita y uno de nuestros asesores te contactará a la brevedad.</p></div>
 
     <div>
-        <footer>
+        <form action="">
+            <div>
+                <div>Nombre:</div>
+                <div><input type="text" maxlength="58"></div>
+            </div>
+            <div>
+                <div>Apellido</div>
+                <div><input type="text" maxlength="80"></div>
+            </div>
+            <div>
+                <div>Correo:</div>
+                <div><input type="email" maxlength="260"></div>
+            </div>
+            <div>
+                <div>Teléfono:</div>
+                <div><input type="number"></div>
+            </div>
+            <div>
+                <div>Cédula:</div>
+                <div><input type="number"></div>
+            </div>
+            <div>
+                <div>Dirección:</div>
+                <div><input type="text" maxlength="100"></div>
+            </div>
+        </form>
+    </div>
+    <div><iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d996.740687533104!2d-79.93470644531527!3d-2.167870808916444!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses-419!2sec!4v1721175849138!5m2!1ses-419!2sec" width="500" height="375" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
+
+    <div>
+        <footer>    
             <div>
                 <a href="#titulo">Ir arriba</a><br>
-                <img src="image.png" width="50"/>
-                <img src="image1.png" width="50"/>
-                <img src="image2.png" width="50"/><br>
+                <img src="..\resources\image.png" width="50"/>
+                <img src="..\resources\image1.png" width="50"/>
+                <img src="..\resources\image2.png" width="50"/><br>
                 <a>TELÉFONO: XXX-XXX-XXX . MÓVIL XXX-XXX-XXXX.  EMAIL: </a>
                 <a href="mailto:SAMPLE@DOMINIO.COM">SAMPLE@DOMINIO.COM</a>
             </div>
