--- a/paginas/contactanos.html
+++ b/paginas/contactanos.html
@@ -10,17 +10,17 @@
     <div>
         <header>
             <div>
-                <h1 id="titulo">TINTA DIGITAL</h1>
+            <h1><img src="../resources/logo.png" class="logo"></h1>
             </div>
         </header>
     </div>      
     <nav>
         <div>
             <a href="..\index.html">Inicio</a>
-            <a href="paginas\nosotros.html">Nosotros</a>
+            <a href="nosotros.html">Nosotros</a>
             <a href="contactanos.html">Contacto</a>
-            <a href="paginas\eventos.html">Eventos</a>
-            <a href="paginas\login.html">Log In</a>
+            <a href="eventos.html">Eventos</a>
+            <a href="login.html">Log In</a>
         </div>
     </nav>
     <div><h1>Contáctanos</h1></div>
@@ -56,16 +56,14 @@
         </form>
     </div>
     <div><iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d996.740687533104!2d-79.93470644531527!3d-2.167870808916444!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses-419!2sec!4v1721175849138!5m2!1ses-419!2sec" width="500" height="375" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
-
     <div>
         <footer>    
             <div>
-                <a href="#titulo">Ir arriba</a><br>
-                <img src="..\resources\image.png" width="50"/>
-                <img src="..\resources\image1.png" width="50"/>
-                <img src="..\resources\image2.png" width="50"/><br>
-                <a>TELÉFONO: XXX-XXX-XXX . MÓVIL XXX-XXX-XXXX.  EMAIL: </a>
-                <a href="mailto:SAMPLE@DOMINIO.COM">SAMPLE@DOMINIO.COM</a>
+                <img src="..\resources\image.png" width="30"/>
+                <img src="..\resources\image1.png" width="30"/>
+                <img src="..\resources\image2.png" width="30"/><br>
+                <a id = "letrasFoot">Teléfono: xxx-xxx-xxxx Móvil: xxx-xxx-xxxx Email: </a>
+                <a id = "letrasFoot" href="mailto:SAMPLE@DOMINIO.COM">sample@dominio.com</a>
             </div>
         </footer>
     </div>
