--- a/paginas/eventos.html
+++ b/paginas/eventos.html
@@ -19,8 +19,16 @@
             <a href="login.html">Log In</a>
         </div>
     </section>
-    <footer>
-        <a href="#titulo">Ir arriba</a>
-    </footer>
+    <div>
+        <footer>    
+            <div>
+                <img src="..\resources\image.png" width="30"/>
+                <img src="..\resources\image1.png" width="30"/>
+                <img src="..\resources\image2.png" width="30"/><br>
+                <a id = "letrasFoot">Teléfono: xxx-xxx-xxxx Móvil: xxx-xxx-xxxx Email: </a>
+                <a id = "letrasFoot" href="mailto:SAMPLE@DOMINIO.COM">sample@dominio.com</a>
+            </div>
+        </footer>
+    </div>
 </body>
 </html>
