--- a/paginas/nosotros.html
+++ b/paginas/nosotros.html
@@ -19,6 +19,28 @@
             <a href="login.html">Log In</a>
         </div>
     </section>
+    <section>
+        <br><br><br>
+        <div class="container">
+            <div class="info">
+                <p>Misión</p>
+                <p>Somos un refugio digital para los amantes de los libros y la literatura. En nuestro espacio, nos dedicamos a fomentar el amor por la lectura y ofrecer una experiencia enriquecedora y accesible para todos.
+                    En nuestra plataforma, encontrarás una variedad de géneros que satisfarán todos los gustos. Ya sea que disfrutes de la ficción, la no ficción, la fantasía, el misterio o la ciencia ficción, tenemos algo para ti</p>
+            </div>
+            <br><br><br>
+            <div class="info">
+                <p>Visión</p>
+                <p>Nuestra misión es hacer que los libros sean accesibles para todos, en cualquier momento y lugar. Creemos en el poder transformador de la lectura, que no solo enriquece la mente, sino también el alma. Nuestro objetivo es conectar a lectores de todo el mundo con una vasta colección de obras literarias, desde clásicos atemporales hasta los últimos bestsellers.</p>
+            </div>
+            <br><br><br>
+            <div class="info">
+                <p>Acerca de</p>
+                <p>Fundada en 2024, nuestra plataforma alberga una amplia variedad de géneros, desde clásicos atemporales hasta las últimas novedades editoriales. </p>
+                    <p>Ya sea que te apasionen las novelas de ficción, los relatos históricos, la ciencia ficción, la poesía o los textos académicos, en LecturaOnline siempre encontrarás algo que despierte tu interés y tu imaginación.
+                    Nos enorgullecemos de ofrecer un entorno inclusivo y accesible, donde cada lector puede personalizar su experiencia de lectura. Con funciones avanzadas como el modo nocturno, ajustes de tamaño de fuente y marcadores virtuales, garantizamos que tu viaje literario sea tan cómodo como fascinante.</p>
+            </div>
+        </div>
+    </section>
     <div>
         <footer>    
             <div>
