--- a/paginas/contactanos.html
+++ b/paginas/contactanos.html
@@ -25,7 +25,7 @@
     </nav>
     <div><h1>Contáctanos</h1></div>
 
-    <div><p>Si deseas consultar mayor información sobre nuestrosservicios o tienes alguna duda al respecto, no dudes en solicitar un consultoría gratuita y uno de nuestros asesores te contactará a la brevedad.</p></div>
+    <div><p>Si deseas consultar mayor información sobre nuestros servicios o tienes alguna duda al respecto, no dudes en solicitar un consultoría gratuita y uno de nuestros asesores te contactará a la brevedad.</p></div>
 
     <div>
         <form action="">
@@ -39,11 +39,11 @@
             </div>
             <div>
                 <div>Correo:</div>
-                <div><input type="email" maxlength="260"></div>
+                <div><input type="email" maxlength="260" required=""></div>
             </div>
             <div>
                 <div>Teléfono:</div>
-                <div><input type="number"></div>
+                <div><input type="number" required=""></div>
             </div>
             <div>
                 <div>Cédula:</div>
@@ -52,6 +52,9 @@
             <div>
                 <div>Dirección:</div>
                 <div><input type="text" maxlength="100"></div>
+            </div>
+            <div>
+                <div><input type="submit"></div>
             </div>
         </form>
     </div>
