--- a/paginas/eventos.html
+++ b/paginas/eventos.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <link rel="stylesheet" href="../css/styles.css">
-    <title>Tinta Digital</title>
+    <title>Tinta Digital | Eventos</title>
 </head>
 <body>
     <header>
