--- a/paginas/login.html
+++ b/paginas/login.html
@@ -3,9 +3,41 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Tinta Digital | Log in </title>
 </head>
 <body>
-    
+    <div>
+        <header>
+            <div>
+                <h1 id="titulo">TINTA DIGITAL</h1>
+            </div>
+        </header>
+    </div>
+    <nav>
+        <div>
+            <a href="..\index.html">Inicio</a>
+            <a href="paginas\nosotros.html">Nosotros</a>
+            <a href="contactanos.html">Contacto</a>
+            <a href="paginas\eventos.html">Eventos</a>
+            <a href="paginas\login.html">Log In</a>
+        </div>
+    </nav>
+
+
+
+<!-- aqui tienes que hacer todo sobre el log in  -->
+
+    <div>
+        <footer>
+            <div>
+                <a href="#titulo">Ir arriba</a><br>
+                <img src="..\resources\image.png" width="50"/>
+                <img src="..\resources\image1.png" width="50"/>
+                <img src="..\resources\image2.png" width="50"/><br>
+                <a>TELÉFONO: XXX-XXX-XXX . MÓVIL XXX-XXX-XXXX.  EMAIL: </a>
+                <a href="mailto:SAMPLE@DOMINIO.COM">SAMPLE@DOMINIO.COM</a>
+            </div>
+        </footer>
+    </div>
 </body>
 </html>
