--- a/paginas/eventos.html
+++ b/paginas/eventos.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/styles.css">
     <title>Tinta Digital | Eventos</title>
 </head>
@@ -19,6 +21,28 @@
             <a href="login.html">Log In</a>
         </div>
     </section>
+        <div class="container">
+            <h1>Los más vendidos</h1>
+            <div class="bestsellers">
+                <div class="bestseller">
+                    <img src="book-cover1.jpg" alt="Book Cover">
+                    <p>Descripción<br>Fecha:<br>Autor</p>
+                </div>
+                <div class="bestseller">
+                    <img src="book-cover2.jpg" alt="Book Cover">
+                    <p>Descripción<br>Fecha:<br>Autor</p>
+                </div>
+                <div class="bestseller">
+                    <img src="book-cover3.jpg" alt="Book Cover">
+                    <p>Descripción<br>Fecha:<br>Autor</p>
+                </div>
+                <div class="bestseller">
+                    <img src="book-cover4.jpg" alt="Book Cover">
+                    <p>Descripción<br>Fecha:<br>Autor</p>
+                </div>
+            </div>
+        </div>
+
     <div>
         <footer>    
             <div>
