--- a/paginas/eventos.html
+++ b/paginas/eventos.html
@@ -25,19 +25,19 @@
             <h1>Los más vendidos</h1>
             <div class="bestsellers">
                 <div class="bestseller">
-                    <img src="book-cover1.jpg" alt="Book Cover">
+                    <img src=" " alt="Book Cover">
                     <p>Descripción<br>Fecha:<br>Autor</p>
                 </div>
                 <div class="bestseller">
-                    <img src="book-cover2.jpg" alt="Book Cover">
+                    <img src=" " alt="Book Cover">
                     <p>Descripción<br>Fecha:<br>Autor</p>
                 </div>
                 <div class="bestseller">
-                    <img src="book-cover3.jpg" alt="Book Cover">
+                    <img src=" " alt="Book Cover">
                     <p>Descripción<br>Fecha:<br>Autor</p>
                 </div>
                 <div class="bestseller">
-                    <img src="book-cover4.jpg" alt="Book Cover">
+                    <img src=" " alt="Book Cover">
                     <p>Descripción<br>Fecha:<br>Autor</p>
                 </div>
             </div>
