--- a/paginas/eventos.html
+++ b/paginas/eventos.html
@@ -21,28 +21,29 @@
             <a href="login.html">Log In</a>
         </div>
     </section>
-        <div class="container">
-            <h1>Los más vendidos</h1>
-            <div class="bestsellers">
-                <div class="bestseller">
-                    <img src=" " alt="Book Cover">
-                    <p>Descripción<br>Fecha:<br>Autor</p>
-                </div>
-                <div class="bestseller">
-                    <img src=" " alt="Book Cover">
-                    <p>Descripción<br>Fecha:<br>Autor</p>
-                </div>
-                <div class="bestseller">
-                    <img src=" " alt="Book Cover">
-                    <p>Descripción<br>Fecha:<br>Autor</p>
-                </div>
-                <div class="bestseller">
-                    <img src=" " alt="Book Cover">
-                    <p>Descripción<br>Fecha:<br>Autor</p>
-                </div>
-            </div>
-        </div>
 
+    <h2>Los más vendidos</h2>
+    <table>
+        <tr>
+            <td>
+                <img src=" " alt="Book Cover"><br>
+                Descripción<br>Fecha:<br>Autor
+            </td>
+            <td>
+                <img src=" " alt="Book Cover"><br>
+                Descripción<br>Fecha:<br>Autor
+            </td>
+            <td>
+                <img src=" " alt="Book Cover"><br>
+                Descripción<br>Fecha:<br>Autor
+            </td>
+            <td>
+                <img src=" " alt="Book Cover"><br>
+                Descripción<br>Fecha:<br>Autor
+            </td>
+        </tr>
+    </table>
+    
     <div>
         <footer>    
             <div>
