--- a/paginas/nosotros.html
+++ b/paginas/nosotros.html
@@ -23,18 +23,18 @@
         <div>
             <div>
                 <p id = "text2">Misión</p>
-                <p>Somos un refugio digital para los amantes de los libros y la literatura. En nuestro espacio, nos dedicamos a fomentar el amor por la lectura y ofrecer una experiencia enriquecedora y accesible para todos.
+                <p id = "text3">Somos un refugio digital para los amantes de los libros y la literatura. En nuestro espacio, nos dedicamos a fomentar el amor por la lectura y ofrecer una experiencia enriquecedora y accesible para todos.
                     En nuestra plataforma, encontrarás una variedad de géneros que satisfarán todos los gustos. Ya sea que disfrutes de la ficción, la no ficción, la fantasía, el misterio o la ciencia ficción, tenemos algo para ti
                 </p>
             </div>
             <div>
                 <p id = "text2">Visión</p>
-                <p>Nuestra misión es hacer que los libros sean accesibles para todos, en cualquier momento y lugar. Creemos en el poder transformador de la lectura, que no solo enriquece la mente, sino también el alma. Nuestro objetivo es conectar a lectores de todo el mundo con una vasta colección de obras literarias, desde clásicos atemporales hasta los últimos bestsellers.</p> 
+                <p id = "text3">Nuestra misión es hacer que los libros sean accesibles para todos, en cualquier momento y lugar. Creemos en el poder transformador de la lectura, que no solo enriquece la mente, sino también el alma. Nuestro objetivo es conectar a lectores de todo el mundo con una vasta colección de obras literarias, desde clásicos atemporales hasta los últimos bestsellers.</p> 
             </div>
             <div>
                 <p id = "text2">Acerca de</p>
-                <p>Fundada en 2024, nuestra plataforma alberga una amplia variedad de géneros, desde clásicos atemporales hasta las últimas novedades editoriales. </p>
-                    <p>Ya sea que te apasionen las novelas de ficción, los relatos históricos, la ciencia ficción, la poesía o los textos académicos, en Tinta Digital siempre encontrarás algo que despierte tu interés y tu imaginación.
+                <p id = "text3">Fundada en 2024, nuestra plataforma alberga una amplia variedad de géneros, desde clásicos atemporales hasta las últimas novedades editoriales. </p>
+                    <p id = "text3">Ya sea que te apasionen las novelas de ficción, los relatos históricos, la ciencia ficción, la poesía o los textos académicos, en Tinta Digital siempre encontrarás algo que despierte tu interés y tu imaginación.
                     Nos enorgullecemos de ofrecer un entorno inclusivo y accesible, donde cada lector puede personalizar su experiencia de lectura. Con funciones avanzadas como el modo nocturno, ajustes de tamaño de fuente y marcadores virtuales, garantizamos que tu viaje literario sea tan cómodo como fascinante.</p>
             </div>
         </div>
