--- a/paginas/nosotros.html
+++ b/paginas/nosotros.html
@@ -42,9 +42,9 @@
     <div>
         <footer>    
             <div>
-                <img src="..\resources\image.png" width="30"/>
-                <img src="..\resources\image1.png" width="30"/>
-                <img src="..\resources\image2.png" width="30"/><br>
+                <img id = "imgRS" src="..\resources\image.png" width="30"/>
+                <img id = "imgRS" src="..\resources\image1.png" width="30"/>
+                <img id = "imgRS" src="..\resources\image2.png" width="30"/><br>
                 <a id = "letrasFoot">Teléfono: xxx-xxx-xxxx Móvil: xxx-xxx-xxxx Email: </a>
                 <a id = "letrasFoot" href="mailto:SAMPLE@DOMINIO.COM">sample@dominio.com</a>
             </div>
