--- a/paginas/nosotros.html
+++ b/paginas/nosotros.html
@@ -7,16 +7,15 @@
 <body>
     <header>
         <div>
-        <h1><img src="../resources/logo.png" class="logo"></h1>
+        <img src="../resources/logo.png" class="logo">
         </div>
     </header>
     <section>
-        <div>
-            <a href="../index.html">Inicio</a>
-            <a href="nosotros.html">Nosotros</a>
-            <a href="contactanos.html">Contacto</a>
-            <a href="eventos.html">Eventos</a>
-            <a href="login.html">Log In</a>
+        <div class="sidebar">
+            <a href="../index.html"><img src="../resources/inicio.png" class="icon"></a>
+            <a href="eventos.html"><img src="../resources/eventos.png"  class="icon"></a>
+            <a href="nosotros.html"><img src="../resources/nosotros.png" class="icon"></a>
+            <a href="contactanos.html"><img src="../resources/contacto.png"  class="icon"></a>
         </div>
     </section>
     <section id = "text1">
