--- a/paginas/contactanos.html
+++ b/paginas/contactanos.html
@@ -23,42 +23,49 @@
             <a href="login.html">Log In</a>
         </div>
     </nav>
-    <div><h1>Contáctanos</h1></div>
 
-    <div><p>Si deseas consultar mayor información sobre nuestros servicios o tienes alguna duda al respecto, no dudes en solicitar un consultoría gratuita y uno de nuestros asesores te contactará a la brevedad.</p></div>
+    <div><h1 id="cont_title">Contáctanos</h1></div>
 
-    <div>
-        <form action="">
-            <div>
-                <div>Nombre:</div>
-                <div><input type="text" maxlength="58"></div>
-            </div>
-            <div>
-                <div>Apellido</div>
-                <div><input type="text" maxlength="26"></div>
-            </div>
-            <div>
-                <div>Correo:</div>
-                <div><input type="email" maxlength="260" required=""></div>
-            </div>
-            <div>
-                <div>Teléfono:</div>
-                <div><input type="number" required=""></div>
-            </div>
-            <div>
-                <div>Cédula:</div>
-                <div><input type="number"></div>
-            </div>
-            <div>
-                <div>Dirección:</div>
-                <div><input type="text" maxlength="100"></div>
-            </div>
-            <div>
-                <div><input type="submit"></div>
-            </div>
-        </form>
+    <div id="contactanos">
+        <div id="cont_informacion">
+            <div><p class = "cont_contenido">Si deseas consultar mayor información sobre nuestros servicios o tienes alguna duda al respecto, no dudes en solicitar un consultoría gratuita y uno de nuestros asesores te contactará a la brevedad.</p></div>    
+            <div class = "cont_contenido"><iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d996.740687533104!2d-79.93470644531527!3d-2.167870808916444!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses-419!2sec!4v1721175849138!5m2!1ses-419!2sec" width="500" height="375" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
+        </div>
+        
+        <div id="formulario">
+            <form action="">
+                <div>
+                    <div class="text_input">Nombre:</div>
+                    <div class="input"><input type="text" maxlength="58"></div>
+                </div>
+                <div>
+                    <div class="text_input">Apellido</div>
+                    <div class="input"><input type="text" maxlength="26"></div>
+                </div>
+                <div>
+                    <div class="text_input">Correo:</div>
+                    <div class="input"><input type="email" maxlength="260" required=""></div>
+                </div>
+                <div>
+                    <div class="text_input">Teléfono:</div>
+                    <div class="input"><input type="number" required=""></div>
+                </div>
+                <div>
+                    <div class="text_input">Cédula:</div>
+                    <div class="input"><input type="number"></div>
+                </div>
+                <div>
+                    <div class="text_input">Dirección:</div>
+                    <div class="input"><input type="text" maxlength="100"></div>
+                </div>
+                <div>
+                    <div><input type="submit"></div>
+                </div>
+            </form>
+        </div>
     </div>
-    <div><iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d996.740687533104!2d-79.93470644531527!3d-2.167870808916444!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses-419!2sec!4v1721175849138!5m2!1ses-419!2sec" width="500" height="375" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
+
+    
     <div>
         <footer>    
             <div>
