--- a/paginas/contactanos.html
+++ b/paginas/contactanos.html
@@ -32,31 +32,31 @@
             <div class = "cont_contenido"><iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d996.740687533104!2d-79.93470644531527!3d-2.167870808916444!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses-419!2sec!4v1721175849138!5m2!1ses-419!2sec" width="500" height="375" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
         </div>
         
-        <div id="formulario">
-            <form action="">
+        <div id="caja_formulario">
+            <form action="" id="formulario">
                 <div>
                     <div class="text_input">Nombre:</div>
-                    <div class="input"><input type="text" maxlength="58"></div>
+                    <div class = "caja_input"><input type="text" maxlength="104" class="input"></div>
                 </div>
                 <div>
                     <div class="text_input">Apellido</div>
-                    <div class="input"><input type="text" maxlength="26"></div>
+                    <div class = "caja_input"><input type="text" maxlength="62" class="input"></div>
                 </div>
                 <div>
                     <div class="text_input">Correo:</div>
-                    <div class="input"><input type="email" maxlength="260" required=""></div>
+                    <div class = "caja_input"><input type="email" maxlength="260" required="" class="input"></div>
                 </div>
                 <div>
                     <div class="text_input">Teléfono:</div>
-                    <div class="input"><input type="number" required=""></div>
+                    <div class = "caja_input"><input type="number" required="" class="input"></div>
                 </div>
                 <div>
                     <div class="text_input">Cédula:</div>
-                    <div class="input"><input type="number"></div>
+                    <div class = "caja_input"><input type="number" class="input"></div>
                 </div>
                 <div>
                     <div class="text_input">Dirección:</div>
-                    <div class="input"><input type="text" maxlength="100"></div>
+                    <div class = "caja_input"><input type="text" maxlength="100" class="input"></div>
                 </div>
                 <div>
                     <div><input type="submit"></div>
