--- a/paginas/eventos.html
+++ b/paginas/eventos.html
@@ -43,6 +43,13 @@
             </td>
         </tr>
     </table>
+
+    <h2>Los más leídos</h2>
+    <table>
+        <tr>
+            <td>
+                <img src="book-cover1.jpg" alt="Book Cover" width="100"><br>
+                Descripción<br>Fecha:<br>Autor
     
     <div>
         <footer>    
