--- a/paginas/eventos.html
+++ b/paginas/eventos.html
@@ -48,8 +48,27 @@
     <table>
         <tr>
             <td>
-                <img src="book-cover1.jpg" alt="Book Cover" width="100"><br>
+                <img src=" " alt="Book Cover"><br>
                 Descripción<br>Fecha:<br>Autor
+            </td>
+            <td>
+                <img src=" " alt="Book Cover"><br>
+                Descripción<br>Fecha:<br>Autor
+            </td>
+            <td>
+                <img src=" " alt="Book Cover"><br>
+                Descripción<br>Fecha:<br>Autor
+            </td>
+            <td>
+                <img src=" " alt="Book Cover"><br>
+                Descripción<br>Fecha:<br>Autor
+            </td>
+            <td>
+                <img src=" " alt="Book Cover"><br>
+                Descripción<br>Fecha:<br>Autor
+            </td>
+        </tr>
+    </table>
     
     <div>
         <footer>    
