--- a/paginas/eventos.html
+++ b/paginas/eventos.html
@@ -41,6 +41,10 @@
                 <img src=" " alt="Book Cover"><br>
                 Descripción<br>Fecha:<br>Autor
             </td>
+            <td>
+                <img src=" " alt="Book Cover"><br>
+                Descripción<br>Fecha:<br>Autor
+            </td>
         </tr>
     </table>
 
