--- a/paginas/eventos.html
+++ b/paginas/eventos.html
@@ -48,7 +48,7 @@
         </tr>
     </table>
 
-    <h2>Los más leídos</h2>
+    <h2>Los más recientes</h2>
     <table>
         <tr>
             <td>
