--- a/paginas/nosotros.html
+++ b/paginas/nosotros.html
@@ -7,7 +7,14 @@
 <body>
     <header>
         <div>
-        <img src="../resources/logo.png" class="logo">
+            <div class="image-container">
+                <div>
+                    <img src="../resources/logo.png" class="logo">
+                </div>
+                <div>
+                    <a href="login.html"><img src="../resources/login.png" class="loginBt"></a>
+                </div>    
+            </div>
         </div>
     </header>
     <section>
@@ -20,17 +27,17 @@
     </section>
     <section id = "text1">
         <div>
-            <div>
+            <div class="contNosotros">
                 <p id = "text2">Misión</p>
                 <p id = "text3">Somos un refugio digital para los amantes de los libros y la literatura. En nuestro espacio, nos dedicamos a fomentar el amor por la lectura y ofrecer una experiencia enriquecedora y accesible para todos.
                     En nuestra plataforma, encontrarás una variedad de géneros que satisfarán todos los gustos. Ya sea que disfrutes de la ficción, la no ficción, la fantasía, el misterio o la ciencia ficción, tenemos algo para ti
                 </p>
             </div>
-            <div>
+            <div class="contNosotros">
                 <p id = "text2">Visión</p>
                 <p id = "text3">Nuestra misión es hacer que los libros sean accesibles para todos, en cualquier momento y lugar. Creemos en el poder transformador de la lectura, que no solo enriquece la mente, sino también el alma. Nuestro objetivo es conectar a lectores de todo el mundo con una vasta colección de obras literarias, desde clásicos atemporales hasta los últimos bestsellers.</p> 
             </div>
-            <div>
+            <div class="contNosotros">
                 <p id = "text2">Acerca de</p>
                 <p id = "text3">Fundada en 2024, nuestra plataforma alberga una amplia variedad de géneros, desde clásicos atemporales hasta las últimas novedades editoriales. </p>
                     <p id = "text3">Ya sea que te apasionen las novelas de ficción, los relatos históricos, la ciencia ficción, la poesía o los textos académicos, en Tinta Digital siempre encontrarás algo que despierte tu interés y tu imaginación.
