--- a/paginas/eventos.html
+++ b/paginas/eventos.html
@@ -27,23 +27,23 @@
         <tr>
             <td>
                 <img src=" " alt="Book Cover"><br>
-                Descripción<br>Fecha:<br>Autor
+                <p></p>Descripción<br>Fecha:<br>Autor
             </td>
             <td>
                 <img src=" " alt="Book Cover"><br>
-                Descripción<br>Fecha:<br>Autor
+                <p></p>Descripción<br>Fecha:<br>Autor
             </td>
             <td>
                 <img src=" " alt="Book Cover"><br>
-                Descripción<br>Fecha:<br>Autor
+                <p></p>Descripción<br>Fecha:<br>Autor
             </td>
             <td>
                 <img src=" " alt="Book Cover"><br>
-                Descripción<br>Fecha:<br>Autor
+                <p></p>Descripción<br>Fecha:<br>Autor
             </td>
             <td>
                 <img src=" " alt="Book Cover"><br>
-                Descripción<br>Fecha:<br>Autor
+                <p></p>Descripción<br>Fecha:<br>Autor
             </td>
         </tr>
     </table>
@@ -73,7 +73,7 @@
             </td>
         </tr>
     </table>
-    
+      
     <div>
         <footer>    
             <div>
