--- a/paginas/eventos.html
+++ b/paginas/eventos.html
@@ -53,23 +53,23 @@
         <tr>
             <td>
                 <img src=" " alt="Book Cover"><br>
-                Descripción<br>Fecha:<br>Autor
+                <p></p>Descripción<br>Fecha:<br>Autor
             </td>
             <td>
                 <img src=" " alt="Book Cover"><br>
-                Descripción<br>Fecha:<br>Autor
+                <p></p>Descripción<br>Fecha:<br>Autor
             </td>
             <td>
                 <img src=" " alt="Book Cover"><br>
-                Descripción<br>Fecha:<br>Autor
+                <p></p>Descripción<br>Fecha:<br>Autor
             </td>
             <td>
                 <img src=" " alt="Book Cover"><br>
-                Descripción<br>Fecha:<br>Autor
+                <p></p>Descripción<br>Fecha:<br>Autor
             </td>
             <td>
                 <img src=" " alt="Book Cover"><br>
-                Descripción<br>Fecha:<br>Autor
+                <p></p>Descripción<br>Fecha:<br>Autor
             </td>
         </tr>
     </table>
