--- a/paginas/contactanos.html
+++ b/paginas/contactanos.html
@@ -59,7 +59,7 @@
                     <div class = "caja_input"><input type="text" maxlength="100" class="input"></div>
                 </div>
                 <div>
-                    <div><input type="submit"></div>
+                    <div id="enviar_caja"><input type="submit" id="enviar"></div>
                 </div>
             </form>
         </div>
