--- a/paginas/contactanos.html
+++ b/paginas/contactanos.html
@@ -35,27 +35,27 @@
         <div id="caja_formulario">
             <form action="" id="formulario">
                 <div>
-                    <div class="text_input">Nombre:</div>
+                    <label for="" class="text_input">Nombre:</label>
                     <div class = "caja_input"><input type="text" maxlength="110" class="input"></div>
                 </div>
                 <div>
-                    <div class="text_input">Apellido</div>
+                    <label for="" class="text_input">Apellido</label>
                     <div class = "caja_input"><input type="text" maxlength="65" class="input"></div>
                 </div>
                 <div>
-                    <div class="text_input">Correo:</div>
+                    <label for="" class="text_input">Correo:</label>
                     <div class = "caja_input"><input type="email" maxlength="260" required="" class="input"></div>
                 </div>
                 <div>
-                    <div class="text_input">Teléfono:</div>
+                    <label for="" class="text_input">Teléfono:</label>
                     <div class = "caja_input"><input type="number" required="" class="input"></div>
                 </div>
                 <div>
-                    <div class="text_input">Cédula:</div>
+                    <label for="" class="text_input">Cédula:</label>
                     <div class = "caja_input"><input type="number" class="input"></div>
                 </div>
                 <div>
-                    <div class="text_input">Dirección:</div>
+                    <label for="" class="text_input">Dirección:</label>
                     <div class = "caja_input"><input type="text" maxlength="100" class="input"></div>
                 </div>
                 <div>
