--- a/paginas/contactanos.html
+++ b/paginas/contactanos.html
@@ -7,22 +7,26 @@
     <link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
-    <div>
-        <header>
-            <div>
-            <h1><img src="../resources/logo.png" class="logo"></h1>
-            </div>
-        </header>
-    </div>      
-    <nav>
+    <header>
         <div>
-            <a href="..\index.html">Inicio</a>
-            <a href="nosotros.html">Nosotros</a>
-            <a href="contactanos.html">Contacto</a>
-            <a href="eventos.html">Eventos</a>
-            <a href="login.html">Log In</a>
+            <div class="image-container">
+                <div>
+                    <img src="../resources/logo.png" class="logo">
+                </div>
+                <div>
+                    <a href="login.html"><img src="../resources/login.png" class="loginBt"></a>
+                </div>    
+            </div>
         </div>
-    </nav>
+    </header>      
+    <section>
+        <div class="sidebar">
+            <a href="../index.html"><img src="../resources/inicio.png" class="icon"></a>
+            <a href="eventos.html"><img src="../resources/eventos.png"  class="icon"></a>
+            <a href="nosotros.html"><img src="../resources/nosotros.png" class="icon"></a>
+            <a href="contactanos.html"><img src="../resources/contacto.png"  class="icon"></a>
+        </div>
+    </section>
 
     <div><h1 id="cont_title">Contáctanos</h1></div>
 
