--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
                 <img id = "imgRS" src="..\resources\image.png" width="30"/>
                 <img id = "imgRS" src="..\resources\image1.png" width="30"/>
                 <img id = "imgRS" src="..\resources\image2.png" width="30"/><br>
-                <a id = "letrasFoot">Teléfono: xxx-xxx-xxxx Móvil: xxx-xxx-xxxx Email: </a>
-                <a id = "letrasFoot" href="mailto:SAMPLE@DOMINIO.COM">sample@dominio.com</a>
+                <a id = "letrasFoot">Teléfono: 096-137-2525 Móvil: 099-354-6479 Email: </a>
+                <a id = "letrasFoot" href="mailto:miller.cano@cbecheverria.edu.ec">miller.cano@cbecheverria.edu.ec</a>
             </div>
         </footer>
     </div>
