--- a/paginas/contactanos.html
+++ b/paginas/contactanos.html
@@ -33,7 +33,7 @@
     <div id="contactanos">
         <div id="cont_informacion">
             <div><p class = "cont_contenido">Si deseas consultar mayor información sobre nuestros servicios o tienes alguna duda al respecto, no dudes en solicitar un consultoría gratuita y uno de nuestros asesores te contactará a la brevedad.</p></div>    
-            <div class = "cont_contenido"><iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d996.740687533104!2d-79.93470644531527!3d-2.167870808916444!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses-419!2sec!4v1721175849138!5m2!1ses-419!2sec" width="500" height="375" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
+            <div class = "cont_mapa"><iframe id = "cont_mapa" src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d996.740687533104!2d-79.93470644531527!3d-2.167870808916444!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses-419!2sec!4v1721175849138!5m2!1ses-419!2sec" width="500" height="375" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
         </div>
         
         <div id="caja_formulario">
