--- a/paginas/contactanos.html
+++ b/paginas/contactanos.html
@@ -6,7 +6,7 @@
     <title>Tinta Digital | Contáctanos</title>
     <link rel="stylesheet" href="../css/styles.css">
 </head>
-<body>
+<body id = "body_contact">
     <header>
         <div>
             <div class="image-container">
