--- a/paginas/login.html
+++ b/paginas/login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Login</title>
+    <title>Tinta Digital | Login</title>
     <link rel="stylesheet" href="../css/styles.css">
     <div>
         <a href="../index.html"><img src="../resources/atras.png" height="50" class="atrasimg"></a>
