--- a/paginas/contactanos.html
+++ b/paginas/contactanos.html
@@ -28,7 +28,7 @@
         </div>
     </section>
 
-    <div><h1 id="cont_title">Contáctanos</h1></div>
+    <div id = "caja_title_cont"><h1 id="cont_title">Contáctanos</h1></div>
 
     <div id="contactanos">
         <div id="cont_informacion">
