--- a/Game/index.html
+++ b/Game/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     
-
+    <p id = "pe">Nada</p>
     <script src="src\phaser.js"></script>
     <script src="src\windowSize.js"></script>
 </body>
