--- a/Game/index.html
+++ b/Game/index.html
@@ -10,6 +10,6 @@
     
     <p id = "pe">Nada</p>
     <script src="src\phaser.js"></script>
-    <script src="src\windowSize.js"></script>
+    <script src="src\index.js" type="module"></script>
 </body>
 </html>
