--- a/Game/index.html
+++ b/Game/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     
-    <p id = "pe">Nada</p>
+    <p id = "num"></p>
+    <p id = "num2"></p>
     <script src="src\phaser.js"></script>
     <script src="src\index.js" type="module"></script>
 </body>
