--- a/Game/index.html
+++ b/Game/index.html
@@ -6,11 +6,13 @@
     <title>Juego</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
-<body>
-    
+<body>    
+    <div id="game"></div>
+
     <p id = "num"></p>
     <p id = "num2"></p>
     <script src="src\phaser.js"></script>
     <script src="src\index.js" type="module"></script>
+    
 </body>
 </html>
