--- a/Game/index.html
+++ b/Game/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>    
-    <div id="game"></div>
+    <div id="Preloads"></div>
 
     <p id = "num"></p>
     <p id = "num2"></p>
